Test/errors/err_switch_non_integer.cb
extern int main()
{
    float f = 1.5f;
    expect_error("switch expression must be an integer type");
    switch (f) {
        default:
            break;
    }
    return 0;
}
